[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/core_buttons.gd" type="Script" id=1]

[node name="core_buttons" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 40 )
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="panel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="flow" type="HFlowContainer" parent="margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 1075.0
mouse_filter = 2
custom_constants/hseparation = 5

[node name="file_button" type="Button" parent="margin/flow"]
margin_right = 51.0
margin_bottom = 20.0
text = "  File  "

[node name="edit_button" type="Button" parent="margin/flow"]
margin_left = 56.0
margin_right = 108.0
margin_bottom = 20.0
disabled = true
text = "  Edit  "

[node name="view_button" type="Button" parent="margin/flow"]
margin_left = 113.0
margin_right = 171.0
margin_bottom = 20.0
text = "  View  "

[node name="help_button" type="Button" parent="margin/flow"]
margin_left = 176.0
margin_right = 234.0
margin_bottom = 20.0
disabled = true
text = "  Help  "

[connection signal="pressed" from="margin/flow/file_button" to="." method="_on_file_button_pressed"]
[connection signal="button_up" from="margin/flow/view_button" to="." method="_on_view_button_button_up"]
